@@ -8,7 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Wang Yizhuo (wangyizhuo@gmail.com) - patch (see Bugzilla #239178)
- *     Simon Scholz <simon.scholz@vogella.com> - Bug 430205
+ *     Simon Scholz <simon.scholz@vogella.com> - Bug 430205, 458055
  *******************************************************************************/
 package org.eclipse.ui.internal.forms.widgets;
 
@@ -36,15 +36,15 @@ public class FormImages {
 	}
 
 	private ResourceManagerManger manager = new ResourceManagerManger();
-	private Map descriptors;
-	
+	private Map<Integer, AbstractImageDescriptor> descriptors;
+
 	private FormImages() {
 	}
-	
+
 	private abstract class AbstractImageDescriptor extends ImageDescriptor {
 		RGB[] fRGBs;
 		int fLength;
-		
+
 		AbstractImageDescriptor(Color[] colors, int length) {
 			fRGBs = new RGB[colors.length];
 			for (int i = 0; i < colors.length; i++) {
@@ -53,7 +53,8 @@ public class FormImages {
 			}
 			fLength = length;
 		}
-		
+
+		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof AbstractImageDescriptor) {
 				AbstractImageDescriptor id = (AbstractImageDescriptor)obj;
@@ -67,27 +68,29 @@ public class FormImages {
 			}
 			return false;
 		}
-		
+
+		@Override
 		public int hashCode() {
 			int hash = 0;
-			for (int i = 0; i < fRGBs.length; i++)
-				hash = hash * 7 + fRGBs[i].hashCode();
+			for (RGB fRGB : fRGBs)
+				hash = hash * 7 + fRGB.hashCode();
 			hash = hash * 7 + fLength;
 			return hash;
 		}
 	}
-	
+
 	private class SimpleImageDescriptor extends AbstractImageDescriptor{
 		private int fTheight;
 		private int fMarginHeight;
-		
+
 		SimpleImageDescriptor (Color color1, Color color2,
 				int realtheight, int theight, int marginHeight) {
 			super(new Color[] {color1, color2}, realtheight);
 			fTheight = theight;
 			fMarginHeight = marginHeight;
 		}
-		
+
+		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -97,7 +100,8 @@ public class FormImages {
 			}
 			return false;
 		}
-		
+
+		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
 			hash = hash * 7 + new Integer(fTheight).hashCode();
@@ -105,10 +109,12 @@ public class FormImages {
 			return hash;
 		}
 
+		@Override
 		public ImageData getImageData() {
 			return null;
 		}
-		
+
+		@Override
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color color1 = new Color(device, fRGBs[0]);
@@ -126,12 +132,12 @@ public class FormImages {
 			return image;
 		}
 	}
-	
+
 	private class ComplexImageDescriptor extends AbstractImageDescriptor {
 		RGB fBgRGB;
 		boolean fVertical;
 		int[] fPercents;
-		
+
 		public ComplexImageDescriptor(Color[] colors, int length,
 				int[] percents, boolean vertical, Color bg) {
 			super(colors, length);
@@ -139,7 +145,8 @@ public class FormImages {
 			fVertical = vertical;
 			fPercents = percents;
 		}
-		
+
+		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof ComplexImageDescriptor) {
 				ComplexImageDescriptor id = (ComplexImageDescriptor) obj;
@@ -151,27 +158,30 @@ public class FormImages {
 					// if the only thing that isn't the same is the background color
 					// still return true if it does not matter (percents add up to 100)
 					int sum = 0;
-					for (int i = 0; i < fPercents.length; i++)
-						sum += fPercents[i];
+					for (int fPercent : fPercents)
+						sum += fPercent;
 					if (sum >= 100)
 						return true;
 				}
 			}
 			return false;
 		}
-		
+
+		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + new Boolean(fVertical).hashCode();
-			for (int i = 0; i < fPercents.length; i++)
-				hash = hash * 7 + new Integer(fPercents[i]).hashCode();
+			hash = hash * 7 + Boolean.valueOf(fVertical).hashCode();
+			for (int fPercent : fPercents)
+				hash = hash * 7 + new Integer(fPercent).hashCode();
 			return hash;
 		}
 
+		@Override
 		public ImageData getImageData() {
 			return null;
 		}
-		
+
+		@Override
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			int width = fVertical ? 1 : fLength;
 			int height = fVertical ? fLength : 1;
@@ -184,8 +194,8 @@ public class FormImages {
 			Color bg = fBgRGB == null ? null : new Color(device, fBgRGB);
 			drawTextGradient(gc, width, height, colors, fPercents, fVertical, bg);
 			gc.dispose();
-			for (int i = 0; i < colors.length; i++)
-				colors[i].dispose();
+			for (Color color : colors)
+				color.dispose();
 			if (bg != null)
 				bg.dispose();
 			return gradient;
@@ -212,13 +222,13 @@ public class FormImages {
 					gc.setBackground(lastColor);
 					if (vertical) {
 						int gradientHeight = percents[i] * height / 100;
-						
+
 						gc.fillGradientRectangle(0, pos, width, gradientHeight,
 								true);
 						pos += gradientHeight;
 					} else {
 						int gradientWidth = percents[i] * width / 100;
-						
+
 						gc.fillGradientRectangle(pos, 0, gradientWidth, height,
 								false);
 						pos += gradientWidth;
@@ -249,6 +259,7 @@ public class FormImages {
 			fMarginHeight = marginHeight;
 		}
 
+		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -258,6 +269,7 @@ public class FormImages {
 			return false;
 		}
 
+		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
 			hash = hash * 7 + new Integer(fTheight).hashCode();
@@ -265,10 +277,12 @@ public class FormImages {
 			return hash;
 		}
 
+		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
+		@Override
 		public Image createImage(boolean returnMissingImageOnError, Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color originalBgColor = new Color(device, fRGBs[0]);
@@ -281,23 +295,24 @@ public class FormImages {
 			gc.fillRectangle(0, fTheight - fMarginHeight - 4, 1, 4);
 			gc.dispose();
 			color1.dispose();
+			originalBgColor.dispose();
 			return image;
 		}
 	}
 
 	private class SimpleSectionGradientImageDescriptor extends SimpleSectionImageDescriptor {
 
-		SimpleSectionGradientImageDescriptor(Color originalBgColor, Color color1, Color color2, int realtheight,
+		SimpleSectionGradientImageDescriptor(Color color1, Color color2, int realtheight,
 				int theight,
 				int marginHeight) {
-			super(new Color[] { originalBgColor, color1, color2 }, realtheight, theight, marginHeight);
+			super(new Color[] { color1, color2 }, realtheight, theight, marginHeight);
 		}
 
+		@Override
 		public Image createImage(boolean returnMissingImageOnError, Device device) {
 			Image image = new Image(device, 1, fLength);
-			Color originalBgColor = new Color(device, fRGBs[0]);
-			Color color1 = new Color(device, fRGBs[1]);
-			Color color2 = new Color(device, fRGBs[2]);
+			Color color1 = new Color(device, fRGBs[0]);
+			Color color2 = new Color(device, fRGBs[1]);
 			image.setBackground(color1);
 			GC gc = new GC(image);
 			gc.setBackground(color1);
@@ -305,22 +320,20 @@ public class FormImages {
 			gc.setForeground(color2);
 			gc.setBackground(color1);
 			gc.fillGradientRectangle(0, fMarginHeight + 2, 1, fTheight - 2, true);
-			gc.setBackground(originalBgColor);
-			gc.fillRectangle(0, fTheight - fMarginHeight - 4, 1, 4);
 			gc.dispose();
 			color1.dispose();
 			color2.dispose();
+
 			return image;
 		}
 
 	}
 
-	public Image getSectionGradientImage(Color originalBgColor, Color color1, Color color2, int realtheight,
-			int theight,
-			int marginHeight, Display display) {
+	public Image getSectionGradientImage(Color color1, Color color2, int realtheight, int theight, int marginHeight,
+			Display display) {
 		if (color1 == null || color1.isDisposed())
 			return null;
-		AbstractImageDescriptor desc = new SimpleSectionGradientImageDescriptor(originalBgColor, color1, color2,
+		AbstractImageDescriptor desc = new SimpleSectionGradientImageDescriptor(color1, color2,
 				realtheight, theight, marginHeight);
 		return getGradient(desc, display);
 	}
@@ -337,8 +350,8 @@ public class FormImages {
 			int length, boolean vertical, Color bg, Display display) {
 		if (colors.length == 0)
 			return null;
-		for (int i = 0; i < colors.length; i++)
-			if (colors[i] == null || colors[i].isDisposed())
+		for (Color color : colors)
+			if (color == null || color.isDisposed())
 				return null;
 		if (bg != null && bg.isDisposed())
 			return null;
@@ -352,11 +365,11 @@ public class FormImages {
 		descriptors.put(new Integer(result.hashCode()), desc);
 		return result;
 	}
-	
+
 	public synchronized boolean markFinished(Image image, Display display) {
 		checkHashMaps();
 		Integer imageHashCode = new Integer(image.hashCode());
-		AbstractImageDescriptor desc = (AbstractImageDescriptor)descriptors.get(imageHashCode);
+		AbstractImageDescriptor desc = descriptors.get(imageHashCode);
 		if (desc != null) {
 			LocalResourceManager resourceManager = manager.getResourceManager(display);
 			resourceManager.destroyImage(desc);
@@ -374,9 +387,9 @@ public class FormImages {
 
 	private void checkHashMaps() {
 		if (descriptors == null)
-			descriptors = new HashMap();
+			descriptors = new HashMap<>();
 	}
-	
+
 	private void validateHashMaps() {
 		if (descriptors.size() == 0)
 			descriptors = null;
